force-app/main/default/objects/CRMC_PP__GridView__c/CRMC_PP__GridView__c.object-meta.xml
<CustomObject>
    <description>Saved view of a grid - saves columns, filters, grouping, and sorting.</description>
    <label>Conga Grid View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Grid Views</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>