force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is the default view for the given context and the baseline that a Conga Grid will revert to when reset.</description>
    <inlineHelpText>Indicates this is the default view for the given context and the baseline that a Conga Grid will revert to when reset.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>