force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__JSON__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__JSON__c</fullName>
    <description>Serialized JSON that records the state of the view</description>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>