force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__Last_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Last_Viewed_Date__c</fullName>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>