force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__ObjectName__c</fullName>
    <description>Object this view belongs to</description>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>