force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__Privacy__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Privacy__c</fullName>
    <description>Indicates if a Conga Grid view should be private to the owner or publicly available to all users.</description>
    <inlineHelpText>Indicates if a Conga Grid view should be private to the owner or publicly available to all users.</inlineHelpText>
    <label>Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Public Read-Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>