force-app/main/default/objects/CRMC_PP__GridView__c/fields/CRMC_PP__View_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__View_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>View External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>