force-app/main/default/objects/CRMC_PP__GridView__c/listViews/CRMC_PP__AllViews.listView-meta.xml
<ListView>
    <fullName>CRMC_PP__AllViews</fullName>
    <columns>NAME</columns>
    <columns>CRMC_PP__IsDefault__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CRMC_PP__Description__c</columns>
    <columns>CRMC_PP__ObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Views</label>
</ListView>